# PINRU

./: .gitignore  README.md  Taskfile.yml  builtin_skills.go  chat_service.go  chat_service_test.go  cli_service.go  config_service.go  git_service.go  git_service_test.go  go.mod  go.sum  main.go  package-lock.json  package.json  prompt_artifact_sync.go  prompt_service.go  prompt_service_test.go  submit_service.go  task_service.go  task_service_test.go  trae_session_extract.go  trae_session_extract_test.go  vite.config.ts
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
llmdoc/: index.md
migrations/: 001_init.sql  002_model_runs_extend.sql  003_submit_results.sql  004_task_type.sql  005_project_task_quotas.sql  006_project_submit_defaults.sql  007_project_task_types.sql  008_task_session_list.sql  009_task_prompt_generation_status.sql  010_project_task_type_totals.sql  011_project_overview_markdown.sql  012_model_run_session_list.sql  013_background_jobs.sql  014_llm_provider_acp_types.sql  015_model_run_review.sql  016_task_status_execution_completed.sql  017_ai_review_nodes.sql  018_llm_provider_polish_model.sql  019_ai_review_rounds.sql  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  git.rs  mod.rs  prompt.rs  submit.rs  task.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/services/: code_analysis.rs  git_ops.rs  github.rs  gitlab.rs  llm.rs  mod.rs  prompt.rs
(+233 files in other folders)
