[package]
name = "pinru"
version = "0.1.0"
description = "PinRu - AI Model Code Review Workstation"
authors = ["PinRu Team"]
edition = "2021"

[lib]
name = "pinru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
urlencoding = "2"
tauri-plugin-dialog = "2"
flate2 = "1"
tar = "0.4"
